# tcg-api-trabalho-persistencia

./: .env  README.md  banco_de_dados.db  database.py  main.py  pyproject.toml  requirements.txt  tcg_app.db
migrations/: env.py
migrations/versions/: 1f33a80cc705_create_tables.py  67fde0d0d4e4_added_contraints_in_some_columns_in_the_.py  813c259bdf58_initial_create.py  a15d3753f285_cria_tabela_users.py
models/: models.py  user.py
routes/: cards.py  collections.py  decks.py  users.py
routes/schemas/: cardSchema.py  collectionSchema.py  deckShema.py  userSchema.py
scripts/: script.py  test_db.py
src/: database.py  main.py
src/rotas/: cards.py  collections.py  decks.py  home.py  users.py
