[project]
name = "trabalho-2-persistencia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.12.1",
    "fastapi==0.104.1",
    "psycopg2-binary==2.9.9",
    "pydantic[email]>=2.12.5",
    "python-dotenv==1.0.0",
    "sqlmodel==0.0.14",
    "uvicorn==0.24.0",
]
